# comfyui-vrgamedevgirl

./: .comfyignore  .gitignore  CustomLTXNodes.py  GeneralVideoNodes.py  GeneralVideoNodes2.py  HumoAutomation.py  HumoAutomationExtra1.py  HumoAutomationExtra2.py  LICENSE  LLM.py  LTXLoraTrain.py  README.md  README_INSTALL_FOR_USER.txt  VRGDG_AudioNodes.py  VRGDG_BrowserImageRoutes.py  VRGDG_FaceFix.py  VRGDG_FlowBrowserNodes.py  VRGDG_GemmaPromptSanitizer.py  VRGDG_GeneralNodes.py  VRGDG_GeneralNodes2.py  VRGDG_IV_Adjustments.py  VRGDG_ImageCompareNode.py  VRGDG_ImagePasteBack.py  VRGDG_LTXFirstLastGuide.py  VRGDG_LTXICIngredientsGrid.py  VRGDG_LTXLoopingSampler.py  VRGDG_LUTVideoTools.py  VRGDG_LoraDatasetCreatorNodes.py  VRGDG_ModelPathSettings.py  VRGDG_MusicVideoBuilderNodes.py  VRGDG_MusicVideoPromptCreatorNodes.py  VRGDG_PostProcessPreviewHelpers.py  VRGDG_SilentAudioRoutes.py  VRGDG_StandaloneFaceFixNodes.py  VRGDG_StartImageStoryboard.py  VRGDG_StoryboardBuilderNodes.py  VRGDG_TryV9Dev.py  VRGDG_UpdateRoutes.py  VRGDG_VideoBuilderNodeUI.py  VRGDG_VideoEditorNodes.py  (+13 more)
LUTS/: Presetpro  - Fuji Provia.cube  Presetpro - Ektachrome.cube  Presetpro - Moody Grade.cube  Vintage Color.cube
Workflows/: FirstLastPromptCreatorV1.3.json  FirstLastPromptCreatorV1.4(LTX).json  FirstLastPromptCreatorV1.5(LTX).json  HumoWFV5.json  LyricExtractionForManualWF.json  PromptCreator_NanoB_LTX-2_V1.json  README.md  VRGDV_HumoWF V3.json  VRGDV_HumoWF.json  WanHumoMVC_V6.json  WanHumoMVC_V7.1.json  WanHumoMVC_V7.json  WanHumoMVC_V8.1.json  WanHumoMVC_V8.json  WanHumoMVC_V9.json  Wan_HumoMVC_ManualMode_V1.json  Wan_HumoMVC_Manual_V1.1.json  Z-Image_Wan2.2 FL & Humo_MVC_V2.1.json  Z-image_LTX-2 Music Video Creator V1.00.json  Z-image_LTX-2 Music Video Creator V1.1.json  📘 Documentation Text-to-Video Music Video Workflow (ComfyUI.docx
docs/: COMFYUI_PORTABLE_ONE_CLICK_INSTALLER.md  V7_VIDEO_BUILDER_GUIDE.md  V9_VIDEO_BUILDER_GUIDE.md
flow_automation/: Flow Fully Automatic.bat  Flow Image Edit Automatic.bat  Inspect Flow Buttons.bat  README.md  chatgpt-images-poc.mjs  flow-poc.mjs  inspect-flow-buttons.mjs  manual-bridge.mjs  meta-ai-poc.mjs  package-lock.json  package.json
lib/: credentials.py  image.py
scripts/: Backport-Krea2ToMusubi.ps1  Install-VRGDG-ComfyUI-Portable.ps1  build_v7_guide_pdf.py  far_face_repair_backend.py
tests/: test_flf_vision_observation.py  test_story_arc_sections.py
web/: VRGDG_BoxIT.js  VRGDG_FaceFixUI.js  (+58 more)
(+100 files in other folders)
