[project]
name = "comfyui-vrgamedevgirl"
description = "VRGameDevGirl custom nodes for ComfyUI music-video, audio, image, video, workflow-runner, prompt-creator, and post-process workflows."
version = "9.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "kornia",
    "librosa",
    "imageio",
    "torchcodec",
    "google-generativeai",
    "av",
    "stable-ts",
    "demucs",
    "transformers",
    "accelerate",
    "huggingface_hub",
    "voxcpm",
    "llama-cpp-python",
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

[project.urls]
Repository = "https://github.com/vrgamegirl19/comfyui-vrgamedevgirl"
"Bug Tracker" = "https://github.com/vrgamegirl19/comfyui-vrgamedevgirl/issues"
Documentation = "https://github.com/vrgamegirl19/comfyui-vrgamedevgirl/tree/dev/music-video-builder-ui-test-v9/Workflows/LTX-2_Workflows/Video_Builder"

[tool.comfy]
PublisherId = "vrgamedevgirl"
DisplayName = "VRGameDevGirl Custom Nodes"
